Fix z-index

--- a/src/app/(moderna)/moderna/components/header/Header.module.css
+++ b/src/app/(moderna)/moderna/components/header/Header.module.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 1000;
   transition: transform 0.3s;
   transition: transform 0.3s ease, opacity 1s ease;
 }
